--- a/src/main/resources/com/example/byebyeboxeyes/stylesheet.css
+++ b/src/main/resources/com/example/byebyeboxeyes/stylesheet.css
@@ -26,7 +26,7 @@
 
 #userNameTextField, #passwordTextField,
  #registerUserNameTextField, #registerEmailTextField, #registerPasswordTextField,
- #resetPwdUsername, #resetPwdEmail, #ResetPwdTitle
+ #resetPwdUsername, #resetPwdEmail, #ResetPwdTitle, #DeleteAccount
 {
     -fx-focus-color: #5C2B0F ;
     -fx-text-fill: black;
