--- a/src/main/resources/com/example/byebyeboxeyes/reset-password-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/reset-password-view.fxml
@@ -34,12 +34,12 @@
                   <TextField fx:id="resetPwdEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <children>
-                        <Button contentDisplay="RIGHT" mnemonicParsing="false" onAction="#onSendEmailClick" text="Send Email">
+                        <Button id="sendEmailButton" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#onSendEmailClick" text="Send Email">
                            <HBox.margin>
                               <Insets right="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="25.0" prefWidth="75.0" text="Cancel">
+                        <Button id="cancelButton" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="25.0" prefWidth="75.0" text="Cancel">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
