--- a/src/main/resources/com/example/byebyeboxeyes/statistics-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/statistics-view.fxml
@@ -10,14 +10,16 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.byebyeboxeyes.controller.StatisticsController"
             prefHeight="400.0" prefWidth="600.0">
-    <HBox>
-        <VBox>
+    <HBox style="-fx-padding: 0 45 0 45">
+        <VBox alignment="CENTER" VBox.vgrow="ALWAYS">
+            <Label text="Statistics" alignment="TOP_CENTER" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-padding: 10 0 15 0;" />
+
             <ChoiceBox fx:id="chartChoiceBox"
                        VBox.vgrow="NEVER"
                        prefWidth="150" />
             <VBox fx:id="chartContainer" />
         </VBox>
-        <VBox>
+        <VBox alignment="CENTER" VBox.vgrow="ALWAYS">
             <Label text="Total Time Today" />
             <Label fx:id="totalTimeToday" />
             <Label text="Total Time Overall" />
