--- a/src/main/resources/com/example/byebyeboxeyes/goals-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/goals-view.fxml
@@ -9,7 +9,7 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.byebyeboxeyes.controller.GoalsController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #F0F0EF;">
     <VBox>
         <Label text="GOALSVIEW"/>
         <Label text="GOALSVIEW"/>
