--- a/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
@@ -10,7 +10,7 @@
             prefWidth="591.0"
             xmlns="http://javafx.com/javafx/17.0.2-ea"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.byebyeboxeyes.controller.HomeController">
+            fx:controller="com.example.byebyeboxeyes.controller.HomeController" style="-fx-background-color: #F0F0EF;" >
     <left>
         <VBox prefHeight="400.0" prefWidth="160.0" style="-fx-background-color: #f4f4f4;">  <VBox>
             <fx:include source="current-timer-view.fxml"
@@ -72,10 +72,4 @@
     <center>
         <fx:include source="timer-view.fxml" />
     </center>
-
-   <right>
-       <VBox prefWidth="25.0">
-<!--           Padding on right side-->
-       </VBox>
-   </right>
 </BorderPane>
